--- a/Readme
+++ b/Readme
@@ -8,7 +8,7 @@ It uses:
 
 To run it:
 1.Install Python dependencies from requirements.txt.
-2.Set up API keys (Gemini, Cartesia, Livekit) and your Livekit server URL in a .env file (remember to keep .env out of Git!).
+2.Set up API keys (Gemini, Cartesia, Livekit) and your Livekit server URL in a .env file.
 3.Ensure ffmpeg is installed.
 4.Start your Livekit server.
 5.Run python voice.py and test it using a Livekit client.
